[package]
name = "leaderboard"
version.workspace = true
edition.workspace = true
description = "Leaderboard contract for Rock-Paper-Scissors — tracks player scores and game history CIDs"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "leaderboard"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
